k8/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  labels:
    app: grpc-server
    component: "grpc"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
        component: "grpc"
    spec:
      volumes:
      - name: tls
        secret:
          secretName: tls
      containers:
      - name: grpc-server
        imagePullPolicy: Always
        image: nmercer88/yoshi2:alpha
        ports:
        - containerPort: 50051
          name: grpc-port
          protocol: TCP
        volumeMounts:
          - name: tls
            mountPath: /var/secrets/tls
