k8/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-lb
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: grpc-server
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    component: grpc
  sessionAffinity: None
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: grpc-http-server
spec:
  type: NodePort
  selector:
    app: grpc-server
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30007
