k8/server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
  name: server-ingress
  namespace: default
spec:
  rules:
  - host: mercer.test
    http:
      paths:
      - backend:
          serviceName: server-service
          servicePort: grpc
  # tls:
  # # TODO: TLS
  # # This secret must exist beforehand
  # # The cert must also contain the subj-name fortune-teller.stack.build
  # # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  # - secretName: fortune-teller.stack.build
  #   hosts:
  #     - fortune-teller.stack.build
